<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_centerInParent="true"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/cpu_cooler"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="210dp"
            android:layout_height="210dp">

            <ImageView
                android:id="@+id/tempimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/orange_btn" />

            <ImageView
                android:id="@+id/iv_tempimg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_menu_cpu_cooler" />

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxtSem
                android:id="@+id/batterytemp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="23.2"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/coolbutton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/action_btn" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cool_down"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:weightSum="2">

        <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
            android:id="@+id/showmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overheated"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
            android:id="@+id/showsec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apps_are_causing_problem_hit_cool_down"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/_9sdp"
            android:visibility="gone"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="@color/red" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:background="#61FFFFFF"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:scrollbars="horizontal" />

        </LinearLayout>

        <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
            android:id="@+id/nooverheating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/currently_no_app_causing_overheating"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20dp" />
    </RelativeLayout>

</LinearLayout>