<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@string/junk_cleaner"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/mainbrush"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/rocket" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mainbutton"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/action_btn" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/clean"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:id="@+id/maintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:gravity="center"
                android:text="@string/crystal_clear"
                android:textColor="@color/orange_light"
                android:textSize="16sp"
                android:visibility="gone"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_line_paper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_weight="3"
        android:background="#61FFFFFF"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxt
                    android:id="@+id/systemtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0 MB"
                    android:textColor="@color/red"
                    android:textSize="15dp" />

            </RelativeLayout>

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/system_junk"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxt
                    android:id="@+id/residuetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0 MB"
                    android:textColor="@color/red"
                    android:textSize="15dp" />

            </RelativeLayout>

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/residual_files"
                android:textColor="@color/white"
                android:textSize="15dp" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxt
                    android:id="@+id/temptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0 MB"
                    android:textColor="@color/red"
                    android:textSize="15dp" />

            </RelativeLayout>

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/temporary_files"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxt
                    android:id="@+id/cachetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="0 MB"
                    android:textColor="@color/red"
                    android:textSize="15dp" />

            </RelativeLayout>

            <com.cacheclean.cleanapp.cacheappclean.Overided.CustomTxTReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/cache_memory"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>